# anteojOS

./: .gitignore  CMakeLists.txt  README.md  process.s  prueba.s  run.sh
Bootloader/BMFS/: BareMetal File System.md  README.md  bmfs.c
Bootloader/Pure64/src/: pure64.asm  sysvar.asm
Image/: x64BareBonesImage.qcow2  x64BareBonesImage.vmdk
Kernel/: allocator.c  allocatorTest.c  binaryTree.c  buddySystem.c  dinamicMemory.c  dispatcher.c  exceptions.c  idtLoader.c  ipc.c  irqDispatcher.c  kernel.c  keyboardDriver.c  mathLib.c  memoryManager.c  myAlloc.c  pList.c  pageAllocator.c  pipes.c  printf.c  process.c  queue.c  roundRobin.c  scheduler.c  shellTests.c  sleep.c  syscaller.c  system.c  timer.c  videoDriver.c
Kernel/asm/: interrupts.asm  libasm.asm
Kernel/include/: allocator.h  allocatorTest.h  beepDriver.h  binaryTree.h  buddySystem.h  dinamicMemory.h  dispatcher.h  exceptions.h  idtLoader.h  interrupts.h  ipc.h  ipcStructs.h  keyboardDriver.h  mathLib.h  memoryManager.h  myAlloc.h  pList.h  pageAllocator.h  pipes.h  printf.h  process.h  queue.h  roundRobin.h  scheduler.h  shellTests.h  sleep.h  syscaller.h  system.h  timer.h  videoDriver.h
Toolchain/ModulePacker/: main.c
Userland/SampleCodeModule/: clock.c  linkedList.c  messageTest.c  mutexTest.c  philosophers.c  prodcons.c  sampleCodeModule.c  scLib.c  shell.c  shellCommands.c  stdio.c  stdlib.c  time.c  userPrintf.c  video.c
Userland/SampleCodeModule/include/: clock.h  eyeGlassesSmall.h  linkedList.h  messageTest.h  mutexTest.h  philosophers.h  piloNumbers.h  prodcons.h  scLib.h  shell.h  shellCommands.h  (+5 more)
(+3 files in other folders)
